fixed encoding issue

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ $(document).ready(function () {
 <hr />
 <div id="chapter-1" class="section level1">
 <h1>Chapter 1</h1>
-<p><em>This course seems really interesting and fun. Below is the link</em></p>
+<p><em>R and Git are good tools. This chapter taught us the basics of using them. Below is the link for my repo</em></p>
 <p><a href="https://github.com/jonharju/IODS-project">My repo</a></p>
 <hr />
 </div>
